# cypherair

./: .gitignore  .mcp.json  .worktreeinclude  AGENTS.md  AUTH_LIFECYCLE_FINISH_WORKLOG.md  Argon2idMemoryGuard.swift  CLAUDE.md  CypherAir-DangerousDeviceTests.xctestplan  CypherAir-DeviceTests.xctestplan  CypherAir-Info.plist  CypherAir-InteropEvidenceTests.xctestplan  CypherAir-MacUITests.xctestplan  CypherAir-UnitTests.xctestplan  CypherAir.entitlements  CypherAirMacOS.entitlements  LICENSE  P3_WORKLOG.md  PHASE7-WORKLOG.local.md  PLAN.md  README.md  SQLCipherArtifactInputs.xcfilelist  WORKLOG-legacy-phases-2-6.md  build-xcframework.sh  project.yml  rust-toolchain.toml
.claude/: settings.json
AppIcon.icon/: icon.json
AppIconA.icon/: icon.json
AppIconB.icon/: icon.json
AppIconC.icon/: icon.json
AppIconD.icon/: icon.json
AppIconE.icon/: icon.json
CypherAir.xcodeproj/: project.pbxproj
Settings.bundle/: Acknowledgements.plist  Root.plist
Tests/: FixtureResources.outputs.xcfilelist  FixtureResources.xcfilelist  RepositoryAuditInputs.xcfilelist  RepositoryAuditOutputs.xcfilelist
UITests/: MacLockShieldUITests.swift  MacUISmokeTests.swift
[AuthTrace] #269 wall=2026-06-11T102429.646-0700 elapsedMs=6440.665…/: [AuthTrace] #269 wall=2026-06-11T102429.646-0700 elapsedMs=6440.665….md
bindings/: pgp_mobile.swift  pgp_mobileFFI.h  pgp_mobileFFI.modulemap
ci_scripts/: ci_post_clone.sh  ci_post_xcodebuild.sh  ci_pre_xcodebuild.sh
docs/: APPLE_SECURE_ENCLAVE_CUSTODY.md  APPLE_SECURE_ENCLAVE_CUSTODY_ARCHITECTURE_PLAN.md  APPLE_SECURE_ENCLAVE_CUSTODY_EVIDENCE.md  APPLE_SECURE_ENCLAVE_CUSTODY_FEASIBILITY.md  APPLE_SECURE_ENCLAVE_CUSTODY_FEASIBILITY_SUMMARY.md  APPLE_SECURE_ENCLAVE_CUSTODY_IMPLEMENTATION_DOCS_GUIDANCE.md  APPLE_SECURE_ENCLAVE_CUSTODY_IMPLEMENTATION_REFERENCE.md  APPLE_SECURE_ENCLAVE_CUSTODY_IMPLEMENTATION_ROADMAP.md  (+119 more)
pgp-mobile/: Cargo.toml  build.rs
pgp-mobile/examples/: generate_certification_binding_fixtures.rs  generate_detailed_signature_fixtures.rs
pgp-mobile/src/: armor.rs  cert_signature.rs  composite_classical.rs  composite_kem.rs  decrypt.rs  encrypt.rs  error.rs  external_composite_decryptor.rs  external_composite_signer.rs  external_decryptor.rs  external_signer.rs  keys.rs  lib.rs  password.rs  qr_url.rs  sign.rs  signature_details.rs  streaming.rs  verify.rs
pgp-mobile/src/external_composite_decryptor/: core.rs  tests.rs
pgp-mobile/src/external_composite_signer/: core.rs  error.rs  provider.rs  tests.rs
pgp-mobile/src/external_decryptor/: core.rs  tests.rs
pgp-mobile/src/external_signer/: core.rs  error.rs  provider.rs  tests.rs
pgp-mobile/src/keys/: expiry.rs  generation.rs  key_info.rs  profile.rs  public_certificates.rs  revocation.rs  s2k.rs  secret_transfer.rs  secure_enclave_generation.rs  selector_discovery.rs  suite.rs
pgp-mobile/src/keys/composite_custody_generation/: mod.rs  tests.rs
pgp-mobile/src/keys/secure_enclave_generation/: mod.rs  tests.rs
pgp-mobile/tests/: certificate_merge_tests.rs  certification_binding_tests.rs  composite_custody_high_tests.rs  composite_custody_lifecycle_tests.rs  composite_custody_message_tests.rs  cross_profile_tests.rs  cross_suite_tests.rs  detailed_signature_tests.rs  external_signer_tests.rs  gnupg_binary_tests.rs  gnupg_fixture_regression_tests.rs  gnupg_interop_tests.rs  gnupg_message_interop_tests.rs  large_payload_tests.rs  legacy_symbol_guardrail_tests.rs  password_message_tests.rs  portable_legacy_key_lifecycle_tests.rs  portable_legacy_message_tests.rs  portable_modern_high_key_lifecycle_tests.rs  portable_modern_high_message_tests.rs  portable_modern_high_slow_tests.rs  portable_modern_key_lifecycle_tests.rs  portable_pq_high_key_lifecycle_tests.rs  portable_pq_key_lifecycle_tests.rs  portable_pq_message_tests.rs  pqc_spike.rs  profile_a_key_lifecycle_tests.rs  profile_a_message_tests.rs  profile_a_tests.rs  profile_b_key_lifecycle_tests.rs  profile_b_message_tests.rs  profile_b_slow_tests.rs  profile_b_tests.rs  public_certificate_validation_tests.rs  qr_url_tests.rs  revocation_construction_tests.rs  secure_enclave_gnupg_interop_tests.rs  secure_enclave_support_tests.rs  secure_enclave_v6_aead_evidence_tests.rs  security_audit_tests.rs  (+10 more)
pgp-mobile/tests/certification_binding/: direct_key_verification.rs  helpers.rs  mod.rs  signer_selection.rs  user_id_generation.rs  user_id_verification.rs
pgp-mobile/tests/common/: composite.rs  fixtures.rs  format.rs  gnupg.rs  mod.rs  pq.rs  secure_enclave.rs  sq.rs  tamper.rs
pgp-mobile/tests/external_signer/: certificate.rs  certification.rs  cleartext.rs  detached_file.rs  expiry.rs  mod.rs  password_message.rs  revocation.rs  streaming_file_encrypt.rs  text_encrypt.rs
pgp-mobile/tests/fixtures/: generate_gpg_fixtures.sh  generate_sq_fixtures.sh  gpg_cleartext_signed.asc  gpg_detached_sig.asc  gpg_detached_sig.sig  gpg_encrypted_compressed_deflate.asc  gpg_encrypted_compressed_zlib.asc  gpg_encrypted_message.asc  gpg_encrypted_message.gpg  gpg_encrypted_tampered.gpg  gpg_plaintext.txt  gpg_pubkey.asc  gpg_pubkey.gpg  gpg_secretkey.asc  gpg_signed_compressed.asc  gpg_v6_import_rejection.txt  gpg_version.txt  merge_add_encryption_subkey_modern_high_update.gpg  merge_add_encryption_subkey_profile_a_base.gpg  merge_primary_uid_update.gpg  merge_revocation_profile_b_base.gpg  merge_revocation_profile_b_update.gpg  modern_high_v6_pubkey.gpg  sq_legacy_detached_sig.asc  sq_legacy_encrypted.asc  sq_legacy_inline_signed.asc  sq_legacy_pubkey.asc  sq_legacy_secretkey.asc  sq_modern_detached_sig.asc  sq_modern_encrypted.asc  sq_modern_inline_signed.asc  sq_modern_pubkey.asc  sq_modern_secretkey.asc  sq_modernhigh_detached_sig.asc  sq_modernhigh_encrypted.asc  sq_modernhigh_inline_signed.asc  sq_modernhigh_pubkey.asc  sq_modernhigh_secretkey.asc  sq_plaintext.txt  sq_pq_detached_sig.asc  (+10 more)
poc/apple-secure-enclave-custody-phase3/rust/: Cargo.toml
poc/apple-secure-enclave-custody-phase3/rust/src/: main.rs
poc/apple-secure-enclave-custody-phase4/rust/: Cargo.toml
poc/apple-secure-enclave-custody-phase4/rust/src/: main.rs
(+1029 files in other folders)
