[package]
name = "pgp-mobile"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later OR MPL-2.0"
description = "OpenPGP wrapper for CypherAir iOS app, powered by Sequoia PGP"

[lib]
crate-type = ["lib", "staticlib"]
name = "pgp_mobile"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
sequoia-openpgp = { version = "2.2", default-features = false, features = [
    "crypto-openssl",
    "compression-deflate",
] }
uniffi = { version = "0.31", features = ["cli"] }
openssl = { version = "0.10", features = ["vendored"] }
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[profile.release]
lto = false
strip = "none"
codegen-units = 1

# Temporary downstream carry for Apple arm64e experiments:
# pgp-mobile -> cypherair/openssl-src-rs (carry/apple-arm64e-openssl-fork)
#            -> cypherair/openssl (carry/apple-arm64e-targets)
# The openssl-src-rs fork commit intentionally tracks a CypherAir OpenSSL fork
# branch. Do not treat this chain as upstreamable piecemeal until the OpenSSL
# target-definition changes land upstream.
[patch.crates-io]
openssl-src = { git = "https://github.com/cypherair/openssl-src-rs", rev = "36d52f499d71d90c8c4b89c53210cbdde34e0528" }
