[package]
name = "pgp-mobile"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later OR MPL-2.0"
description = "OpenPGP wrapper for CypherAir iOS app, powered by Sequoia PGP"

[lib]
crate-type = ["lib", "staticlib"]
name = "pgp_mobile"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
sequoia-openpgp = { version = "=2.4.1", default-features = false, features = [
    "crypto-openssl",
    "compression-deflate",
] }
uniffi = { version = "0.31", features = ["cli"] }
openssl = { version = "0.10", features = ["vendored"] }
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
sequoia-openpgp = { version = "=2.4.1", default-features = false, features = [
    "crypto-openssl",
    "compression-deflate",
] }
# Fake Secure Enclave ML-KEM decapsulation in tests. Version-locked to the same
# ossl release sequoia-openpgp's crypto-openssl backend already pulls in, with
# the same feature shape (reuse the openssl-sys build instead of a second
# OpenSSL source tree).
ossl = { version = "1.5.2", default-features = false, features = ["openssl-sys"] }

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[profile.release]
lto = false
strip = "none"
codegen-units = 1

# Temporary downstream carry for Apple arm64e experiments:
# pgp-mobile -> cypherair/openssl-src-rs (carry/apple-arm64e-openssl-fork)
#            -> cypherair/openssl (carry/apple-arm64e-targets)
# sequoia-openpgp -> cypherair/linktime/ctor (carry/apple-ctor-1.0.9)
# The openssl-src-rs carry branch intentionally tracks a CypherAir OpenSSL fork
# branch. The ctor carry aligns its Apple archive-retention pointer for ld64.
# Cargo.lock records resolved commits for reproducibility, while the manifest
# tracks carry branches so branch-local fixes are not left behind.
[patch.crates-io]
ctor = { git = "https://github.com/cypherair/linktime", branch = "carry/apple-ctor-1.0.9" }
openssl-src = { git = "https://github.com/cypherair/openssl-src-rs", branch = "carry/apple-arm64e-openssl-fork" }
